--- a/DecoTiles.csproj
+++ b/DecoTiles.csproj
@@ -18,4 +18,7 @@
   <ItemGroup>
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Management" />
+  </ItemGroup>
 </Project>
