--- a/DecoTiles.csproj
+++ b/DecoTiles.csproj
@@ -21,4 +21,7 @@
   <ItemGroup>
     <Reference Include="System.Management" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Tiles\Furn\Misc\Fountains\" />
+  </ItemGroup>
 </Project>
